<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_stroke_dark"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:padding="10dip" >

        <TextView
            style="@style/FormLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_select_interval" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                style="@style/FormLabel"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/label_date_start" />

            <TextView
                android:id="@+id/editDateStart"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:background="@drawable/shape_white_stroke_dark"
                android:gravity="center"
                android:inputType="date"
                android:padding="5dip"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                style="@style/FormLabel"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/label_date_end" />

            <TextView
                android:id="@+id/editDateEnd"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:background="@drawable/shape_white_stroke_dark"
                android:gravity="center"
                android:inputType="date"
                android:padding="5dip"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/fragment_autowashes_list" />

</LinearLayout>